[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ui/icon/arrow.png" type="Texture" id=1]
[ext_resource path="res://menu/lobby-menu/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://addons/LANServerBroadcast/server_advertiser/ServerAdvertiser.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/button/border_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/ui/server-browser/back.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/icon/host.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/simple_loading/simple_loading_dialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/ui/simple_dialog_option/simple_dialog_option.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/SafeArea/SafeArea.gd" type="Script" id=11]

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="control" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="PanelContainer" type="MarginContainer" parent="CanvasLayer/control"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/control/PanelContainer"]
margin_right = 600.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.27451, 0.27451, 0.27451, 0.756863 )

[node name="SafeArea" type="MarginContainer" parent="CanvasLayer/control/PanelContainer"]
margin_right = 600.0
margin_bottom = 100.0
script = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/control/PanelContainer/SafeArea"]
margin_right = 600.0
margin_bottom = 100.0

[node name="back" type="Button" parent="CanvasLayer/control/PanelContainer/SafeArea/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
custom_fonts/font = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="CanvasLayer/control/PanelContainer/SafeArea/HBoxContainer/back"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 7 )
expand = true

[node name="margin" type="CenterContainer" parent="CanvasLayer/control/PanelContainer/SafeArea/HBoxContainer"]
margin_left = 104.0
margin_right = 496.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/control/PanelContainer/SafeArea/HBoxContainer/margin"]
margin_left = 117.0
margin_top = 20.0
margin_right = 274.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Lobby"
align = 1
valign = 1

[node name="add_bot" type="Button" parent="CanvasLayer/control/PanelContainer/SafeArea/HBoxContainer"]
margin_left = 500.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="TextureRect" parent="CanvasLayer/control/PanelContainer/SafeArea/HBoxContainer/add_bot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 60 )
texture = ExtResource( 8 )
expand = true

[node name="VBoxContainer" type="Control" parent="CanvasLayer/control"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 1024.0
mouse_filter = 2
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/control/VBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -320.0
rect_min_size = Vector2( 0, 320 )
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/control/VBoxContainer/VBoxContainer3"]
margin_right = 600.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 320 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.27451, 0.27451, 0.27451, 0.756863 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/control/VBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -312.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 320 )
mouse_filter = 2
alignment = 2

[node name="VBoxContainer" type="HBoxContainer" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2"]
margin_top = 8.0
margin_right = 600.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2"]
margin_top = 112.0
margin_right = 600.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 20 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2"]
margin_top = 136.0
margin_right = 600.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
alignment = 1

[node name="prev" type="Button" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 82.0
margin_right = 182.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 4
flat = true

[node name="Label" type="TextureRect" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2/prev"]
modulate = Color( 1, 1, 1, 0.678431 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
flip_h = true

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 186.0
margin_right = 196.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2

[node name="play" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2" instance=ExtResource( 5 )]
margin_left = 200.0
margin_right = 400.0
margin_bottom = 100.0
button_label = "Play"

[node name="ready" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2" instance=ExtResource( 5 )]
visible = false
margin_left = 351.0
margin_right = 551.0
button_label = "Ready"

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 404.0
margin_right = 414.0
margin_bottom = 100.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2

[node name="next" type="Button" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 418.0
margin_right = 518.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_vertical = 4
flat = true

[node name="Label" type="TextureRect" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2/next"]
modulate = Color( 1, 1, 1, 0.678431 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/control/VBoxContainer/VBoxContainer2"]
margin_top = 240.0
margin_right = 600.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 80 )

[node name="simple_dialog_option" parent="CanvasLayer" instance=ExtResource( 10 )]
visible = false

[node name="simple_loading_dialog" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="server_advertise" type="Node" parent="."]
script = ExtResource( 3 )

[node name="exit_timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="CanvasLayer/control/PanelContainer/SafeArea/HBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CanvasLayer/control/PanelContainer/SafeArea/HBoxContainer/add_bot" to="." method="_on_add_bot_pressed"]
[connection signal="pressed" from="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2/ready" to="." method="_on_ready_pressed"]
[connection signal="pressed" from="CanvasLayer/control/VBoxContainer/VBoxContainer2/HBoxContainer2/next" to="." method="_on_next_pressed"]
[connection signal="on_yes" from="CanvasLayer/simple_dialog_option" to="." method="_on_simple_dialog_option_on_yes"]
[connection signal="timeout" from="exit_timer" to="." method="_on_exit_timer_timeout"]
